# naughty_n_nice

./: Cargo.toml  README.md
assets/levels/Naughty_N_Nice/: RoomTileMap.xcf
assets/levels/ldtk/: Naughty_n_Nice.ldtk
src/: animation.rs  characters.rs  collision.rs  control_input.rs  game_audio.rs  main.rs  markers.rs  menu.rs  moveable.rs  present.rs  setup.rs
src/animation/: animate_sprite.rs  indices.rs  timer.rs
src/characters/: basic_character.rs  character_with_status.rs  inventory.rs  status.rs
src/control_input/: audio_keyboard.rs  character_keyboard.rs
src/setup/: initial_setup.rs
